# python-monorepo

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
apps/api/: Dockerfile  pyproject.toml  railway.toml
apps/api/src/api_service/: celery_client.py  main.py
apps/api/src/api_service/routes/: add.py  extract_data.py  extract_po_items.py  extract_quote.py  health.py  query.py  summarise_doc.py
apps/api/src/monorepo_api/: main.py
apps/api/tests/: test_extract_data.py  test_extract_po_items.py  test_extract_quote.py  test_health.py
apps/worker/: Dockerfile  pyproject.toml  railway.toml
apps/worker/src/celery_worker/: celery_app.py
apps/worker/src/celery_worker/tasks/: __init__.py  example.py  extract_data.py  extract_po_items.py  extract_quote.py  llm_query.py  summarise_doc.py  summarise_file.py
apps/worker/src/monorepo_worker/tasks/: example.py
apps/worker/tests/: test_extract_data.py  test_extract_po_items.py  test_extract_quote.py  test_tasks.py
infra/compose/: docker-compose.yml
scripts/: dev.sh
