[project]
name = "monorepo-api"
version = "0.1.0"
description = "FastAPI app for python-monorepo"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "monorepo-contracts",
  "monorepo-core",
  "monorepo-domain",
  "uvicorn[standard]>=0.35.0",
]

[tool.uv.sources]
monorepo-contracts = { workspace = true }
monorepo-core = { workspace = true }
monorepo-domain = { workspace = true }

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monorepo_api"]
