[project]
name = "monorepo-api"
version = "0.1.0"
description = "FastAPI app for python-monorepo"
requires-python = ">=3.12"
dependencies = [
  "celery[redis]>=5.5.3",
  "fastapi>=0.116.1",
  "psycopg2-binary>=2.9.9",
  "uvicorn[standard]>=0.35.0",
]

[tool.uv.sources]
monorepo-contracts = { path = "../packages/contracts" }
monorepo-core = { path = "../packages/core" }
monorepo-domain = { path = "../packages/domain" }
monorepo-tasks-db = { path = "../packages/tasks-db" }

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_service"]