[project]
name = "monorepo-worker"
version = "0.1.0"
description = "Celery worker for python-monorepo"
requires-python = ">=3.12"
dependencies = [
  "celery[redis]>=5.5.3",
  "monorepo-blob",
  "monorepo-core",
  "monorepo-domain",
  "monorepo-llm",
  "monorepo-tasks-db",
  "pypdf>=6.9.1",
]

[tool.uv.sources]
monorepo-core = { workspace = true }
monorepo-domain = { workspace = true }
monorepo-llm = { workspace = true }
monorepo-tasks-db = { workspace = true }
monorepo-blob = { workspace = true }

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/celery_worker"]
